<resources>
    <string name="app_name">SantaApp</string>
    <string name="back_button">back button</string>
    <string name="sign_in_with_your_phone">sign in with your phone</string>
    <string name="login_info">Enter your phone number so we can text you an authentication code.</string>
    <string name="phone_number">Phone Number</string>
    <string name="_continue">CONTINUE</string>
    <string name="_1">+1</string>
    <string name="flag">Flag</string>
    <string name="country">Country</string>
    <string name="enter_authentication_code">Enter authentication code</string>
    <string name="resend_code">Resend code</string>
    <string name="you_re_verified">You’re verified!</string>
    <string name="verification_success_message">Thanks for verifying your account. You’re ready to scan your tickets.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="have_an_online_ticket">Have an online ticket?</string>
    <string name="online_ticket_info">To add your Season Pass, please enter or scan your ticket’s QR Code or Barcode using the camera.</string>
    <string name="add_my_ticket">add my ticket</string>
    <string name="purchase_online">Purchase online</string>
    <string name="enter_code_instead">Enter Code Instead</string>
    <string name="close">close</string>
    <string name="scan_ticket">SCAN TICKET</string>
    <string name="scan_qr_code_detail">Fit the barcode or QR in the marked area</string>
    <string name="is_this_your_ticket">IS THIS YOUR TICKET?</string>
    <string name="save_ticket_info">Please review your information. Photo, phone number, and email are required.</string>
    <string name="season_pass">Season Pass</string>
    <string name="pass_id">#234234234</string>
    <string name="add_image_icon">add Image Icon</string>
    <string name="required">Required</string>
    <string name="star">*</string>
    <string name="user_icon">user Icon</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="purchased_on_9_23_2022_by">Purchased on 9/23/2022 by</string>
    <string name="purchase_detail">John Billingname ∙ xxxx-xxxx-xxxx-1234</string>
    <string name="save_ticket_details">SAVE TICKET DETAILS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verification_photo">VERIFICATION PHOTO</string>
    <string name="take_photo_info">Please make sure your face fits in the designated area</string>
    <string name="please_note">please note</string>
    <string name="instruction_1">1. You must bring your ticket to the event to enter.</string>
    <string name="instruction_2">2. Have a photo ID on you that matches the name on the ticket.</string>
    <string name="instruction_3">3. Your photo must be recognizable as you.</string>
    <string name="santa_s_enchanted_forest">Santa’s Enchanted Forest</string>
    <string name="santa_s_nenchanted_nforest">SANTA’S\nENCHANTED\nFOREST</string>
    <string name="my_passes">My Passes</string>
    <string name="add_a_pass">Add a Pass</string>
    <string name="visit_rules"><![CDATA[Visit & Rules]]></string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_passes_added">No passes added.</string>
    <string name="tap_add_a_pass_to_scan_your_online_ticket">Tap Add a Pass to scan your online ticket.</string>
    <string name="build_1_232_121">Build 1.232.121</string>
    <string name="magic_money">Magic Money</string>
    <string name="close_icon">closeIcon</string>
    <string name="save_ticket">Save ticket</string>
</resources>