<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.saveticket.TicketSavedSuccessActivity">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_24"
            android:contentDescription="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPleaseNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:text="@string/please_note"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBack" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivTravel"
            android:layout_width="185dp"
            android:layout_height="190dp"
            android:src="@drawable/img_travel"
            app:layout_constraintTop_toBottomOf="@+id/tvPleaseNote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvInstruction1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/line_spacing_4"
            android:paddingHorizontal="@dimen/margin_24"
            android:text="@string/instruction_1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivTravel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvInstruction2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/line_spacing_4"
            android:paddingHorizontal="@dimen/margin_24"
            android:text="@string/instruction_2"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInstruction1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvInstruction3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/line_spacing_4"
            android:paddingHorizontal="@dimen/margin_24"
            android:text="@string/instruction_3"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInstruction2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_26"
            android:layout_marginBottom="@dimen/margin_20"
            android:height="@dimen/button_height"
            android:backgroundTint="@color/primary"
            android:paddingVertical="@dimen/margin_12"
            android:text="@string/_continue"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:cornerRadius="@dimen/margin_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>