<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_screen_gradient"
        tools:context=".ui.saveticket.SaveTicketActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:contentDescription="@string/back_button"
                android:tint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSaveTicketTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/is_this_your_ticket"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSaveTicketInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:paddingStart="@dimen/margin_48"
                android:paddingEnd="@dimen/margin_48"
                android:text="@string/save_ticket_info"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                app:layout_constraintTop_toBottomOf="@id/tvSaveTicketTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMainPassCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:background="@drawable/bg_yellow_round_corner"
                app:layout_constraintTop_toBottomOf="@id/tvSaveTicketInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_12"
                    android:paddingStart="@dimen/margin_24"
                    android:paddingEnd="@dimen/margin_5"
                    android:text="@string/season_pass"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/pass_id"
                    android:textColor="@color/grey"
                    android:textFontWeight="400"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clSubPassCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginTop="50dp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/clMainPassCard"
                    app:layout_constraintEnd_toEndOf="@+id/clMainPassCard"
                    app:layout_constraintStart_toStartOf="@+id/clMainPassCard"
                    android:paddingBottom="@dimen/margin_16"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/clImageInput"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/bg_image_input"
                        app:layout_constraintEnd_toEndOf="@+id/clSubPassCard"
                        android:visibility="visible"
                        app:layout_constraintStart_toStartOf="@+id/clSubPassCard"
                        app:layout_constraintTop_toTopOf="@+id/clSubPassCard">

                        <ImageView
                            android:id="@+id/addImageIcon"
                            android:layout_width="40dp"
                            android:layout_height="27dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="40dp"
                            android:contentDescription="@string/add_image_icon"
                            android:src="@drawable/ic_camera"
                            app:layout_constraintEnd_toEndOf="@+id/clImageInput"
                            app:layout_constraintStart_toStartOf="@+id/clImageInput"
                            app:layout_constraintTop_toTopOf="@+id/clImageInput" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_16"
                            android:text="@string/star"
                            android:textColor="@color/red"
                            android:textFontWeight="400"
                            android:textSize="24sp"
                            app:layout_constraintEnd_toStartOf="@+id/required"
                            app:layout_constraintStart_toStartOf="@+id/clImageInput"
                            app:layout_constraintTop_toBottomOf="@+id/addImageIcon" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/required"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_5"
                            android:layout_marginEnd="@dimen/margin_12"
                            android:text="@string/required"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toEndOf="@+id/clImageInput"
                            app:layout_constraintStart_toEndOf="@+id/star"
                            app:layout_constraintTop_toBottomOf="@+id/addImageIcon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/clSubPassCard"
                        android:visibility="invisible"
                        app:layout_constraintStart_toStartOf="@+id/clSubPassCard"
                        app:layout_constraintTop_toTopOf="@+id/clSubPassCard"
                        android:id="@+id/userImage"
                        app:strokeWidth="@dimen/line_spacing_4"
                        app:strokeColor="@color/primary"
                        app:shapeAppearanceOverlay="@style/RoundedCornerImage"
                        android:scaleType="centerCrop" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_24"
                        android:background="@drawable/bg_input_box_round_corner"
                        app:boxBackgroundMode="none"
                        app:boxStrokeColor="@color/primary"
                        app:endIconDrawable="@drawable/ic_edit"
                        app:endIconMode="custom"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/clImageInput"
                        app:startIconDrawable="@drawable/ic_user_outline">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fullNameInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_14"
                            android:background="@android:color/transparent"
                            android:hint="@string/full_name"
                            android:textColor="@android:color/black"
                            android:enabled="false"
                            android:textSize="@dimen/text_16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/errorImgName"
                        android:layout_width="@dimen/margin_16"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_tick_1"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                        app:layout_constraintTop_toTopOf="@+id/textInputLayout"
                        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                        android:layout_marginStart="@dimen/margin_10" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_10"
                        android:background="@drawable/bg_input_box_round_corner"
                        app:boxBackgroundMode="none"
                        app:boxStrokeColor="@color/primary"
                        app:endIconDrawable="@drawable/ic_edit"
                        app:endIconMode="custom"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                        app:startIconDrawable="@drawable/ic_phone_outline">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneNumberInput"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/margin_14"
                            android:background="@android:color/transparent"
                            android:hint="@string/phone_number"
                            android:textColor="@android:color/black"
                            android:maxLength="10"
                            android:enabled="false"
                            android:textSize="@dimen/text_16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/errorImgPhone"
                        android:layout_width="@dimen/margin_16"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_tick_1"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout1"
                        app:layout_constraintTop_toTopOf="@+id/textInputLayout1"
                        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout1"
                        android:layout_marginStart="@dimen/margin_10" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_10"
                        android:background="@drawable/bg_input_box_round_corner"
                        app:boxBackgroundMode="none"
                        app:boxStrokeColor="@color/primary"
                        app:endIconDrawable="@drawable/ic_edit"
                        app:endIconMode="custom"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textInputLayout1"
                        android:layout_marginTop="@dimen/margin_10"
                        app:startIconDrawable="@drawable/ic_mail_outline">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_14"
                            android:background="@android:color/transparent"
                            android:hint="@string/email"
                            android:textColor="@android:color/black"
                            android:enabled="false"
                            android:textSize="@dimen/text_16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/errorImgEmail"
                        android:layout_width="@dimen/margin_16"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                        app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
                        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
                        android:layout_marginStart="@dimen/margin_10" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/purchaseDetail"
                        app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
                        app:layout_constraintStart_toStartOf="@id/clSubPassCard"
                        app:layout_constraintEnd_toEndOf="@id/clSubPassCard"
                        android:text="@string/purchased_on_9_23_2022_by"
                        android:textColor="#86858F"
                        android:textSize="12sp"
                        android:layout_marginTop="@dimen/margin_20"
                        android:height="@dimen/margin_18" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/purchaseDetail1"
                        app:layout_constraintTop_toBottomOf="@id/purchaseDetail"
                        app:layout_constraintStart_toStartOf="@id/clSubPassCard"
                        app:layout_constraintEnd_toEndOf="@id/clSubPassCard"
                        android:text="@string/purchase_detail"
                        android:textColor="#86858F"
                        android:textSize="14sp"
                        android:height="21dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Save Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveTicketBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="36dp"
                android:backgroundTint="@color/button_bg_color"
                android:text="@string/save_ticket_details"
                android:textColor="@color/button_text_color"
                android:textSize="22sp"
                android:textAllCaps="true"
                app:cornerRadius="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@id/clMainPassCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
